--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styling.css">
 </head>
 <body>
+    <div class="wrapper">
+        <display></display>
     <h1>Alarm Clock</h1>
     <div class = "content">
         <div class = "columnm">
@@ -155,8 +157,17 @@
                 <option value="59">59</option>
             </select>
         </div>
-    </div>
+        <div class="column">
+            <select>
+                <option value="AM/PM" selected hidden>AM/PM</option>
+                <option value="AM">AM</option>
+                <option value="PM">PM</option>
+            </select>
+        </div>
 
+        <button>Set Alarm!</button>
+    </div>
+</div>
 
 
 
