this is very broken at the moment

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>Alarm Clock</title>
     <link rel="stylesheet" href="styling.css">
 </head>
+
 <body>
     <div class="wrapper">
-        <display></display>
     <h1>Alarm Clock</h1>
+
+    <display>00:00:00 AM</display>
+
     <div class = "content">
         <div class = "columnm">
             <select>
