I got the clock to work correctly now I need to transfer my alarm over

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
     <div class="wrapper">
     <h1>Alarm Clock</h1>
-
-    <display>00:00:00 AM</display>
+    <div class="Clock">
+        <div class="time"></div>    
+    </div>
 
     <div class = "content">
         <div class = "columnm">
