DOesn't work but I'm working on it

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <button id="start">Set</button>
         <div id="active-alarm">
             <div id="arlam-text"></div>
+            <div class="alert">
+                <span class="closebtn" onclick="this.parentElement.style.display='none';"></span>
+            </div>
         </div>
     </div>
 </div>
